CORE-7813:Localization: Some items aren't localized. Localized Add System User page

--- a/Account/App_LocalResources/AddSystemUser.aspx.es-MX.resx
+++ b/Account/App_LocalResources/AddSystemUser.aspx.es-MX.resx
@@ -219,6 +219,9 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Respuesta de seguridad</value>
     </data>
+	<data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
+        <value>Pregunta de seguridad personalizada</value>
+    </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
         <value>Fecha de apertura de la cuenta</value>
     </data>
