--- a/Account/App_LocalResources/AddSystemUser.aspx.ja.resx
+++ b/Account/App_LocalResources/AddSystemUser.aspx.ja.resx
@@ -219,6 +219,9 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>セキュリティ回答</value>
     </data>
+	<data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
+        <value>カスタム セキュリティの質問</value>
+    </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
         <value>アカウントの開始日</value>
     </data>
