--- a/Account/App_LocalResources/AddSystemUser.aspx.resx
+++ b/Account/App_LocalResources/AddSystemUser.aspx.resx
@@ -219,6 +219,9 @@
   <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
     <value>Security Answer</value>
   </data>
+  <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
+    <value>Custom Security Question</value>
+  </data>
   <data name="tbStartDateResource1.Label" xml:space="preserve">
     <value>Account Start Date</value>
   </data>
