--- a/Account/App_LocalResources/AddSystemUser.aspx.de.resx
+++ b/Account/App_LocalResources/AddSystemUser.aspx.de.resx
@@ -219,6 +219,9 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Sicherheitsantwort</value>
     </data>
+	<data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
+        <value>Benutzerdefinierte Sicherheitsfrage</value>
+    </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
         <value>Account Startdatum</value>
     </data>
