--- a/Partition/App_LocalResources/AddPartition.aspx.es-MX.resx
+++ b/Partition/App_LocalResources/AddPartition.aspx.es-MX.resx
@@ -306,165 +306,165 @@
     <value>0</value>
   </data>
   <data name="btnGeneratePasswordResource1.Text" xml:space="preserve">
-    <value>Generate</value>
+    <value>{ES-MX}Generate</value>
   </data>
   <data name="btnGeneratePasswordResource1.Tooltip" xml:space="preserve">
-    <value>Generate Password</value>
+    <value>{ES-MX}Generate Password</value>
   </data>
   <data name="btnValidateResource1.Text" xml:space="preserve">
-    <value>Validate</value>
+    <value>{ES-MX}Validate</value>
   </data>
   <data name="btnValidateResource1.Tooltip" xml:space="preserve">
-    <value>Validate User Name</value>
+    <value>{ES-MX}Validate User Name</value>
   </data>
   <data name="cbApplyDefaultPolicyResource1.BoxLabel" xml:space="preserve">
-    <value>Apply Default Policy</value>
+    <value>{ES-MX}Apply Default Policy</value>
   </data>
   <data name="cbApplyTemplateResource1.BoxLabel" xml:space="preserve">
-    <value>Apply Template</value>
+    <value>{ES-MX}Apply Template</value>
   </data>
   <data name="cbBillableResource1.BoxLabel" xml:space="preserve">
-    <value>Billable</value>
+    <value>{ES-MX}Billable</value>
   </data>
   <data name="cbEmailNotificationResource1.BoxLabel" xml:space="preserve">
-    <value>E-Mail Notification</value>
+    <value>{ES-MX}E-Mail Notification</value>
   </data>
   <data name="cbTaxExemptResource1.BoxLabel" xml:space="preserve">
-    <value>Tax Exempt</value>
+    <value>{ES-MX}Tax Exempt</value>
   </data>
   <data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
-    <value>Authentication Type</value>
+    <value>{ES-MX}Authentication Type</value>
   </data>
   <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
-    <value>Billing Cycle</value>
+    <value>{ES-MX}Billing Cycle</value>
   </data>
   <data name="ddBrandedSiteResource1.Label" xml:space="preserve">
-    <value>Branded Site</value>
+    <value>{ES-MX}Branded Site</value>
   </data>
   <data name="ddCurrencyResource1.Label" xml:space="preserve">
-    <value>Currency</value>
+    <value>{ES-MX}Currency</value>
   </data>
   <data name="ddLanguageResource1.Label" xml:space="preserve">
-    <value>Language</value>
+    <value>{ES-MX}Language</value>
   </data>
   <data name="ddPaperInvoiceResource1.Label" xml:space="preserve">
-    <value>Paper Invoice</value>
+    <value>{ES-MX}Paper Invoice</value>
   </data>
   <data name="ddPriceListResource1.Label" xml:space="preserve">
-    <value>Price List</value>
+    <value>{ES-MX}Price List</value>
   </data>
   <data name="ddSecurityQuestionResource1.Label" xml:space="preserve">
-    <value>Security Question</value>
+    <value>{ES-MX}Security Question</value>
   </data>
   <data name="ddStatusReasonResource1.Label" xml:space="preserve">
-    <value>Status Reason</value>
+    <value>{ES-MX}Status Reason</value>
   </data>
   <data name="ddTimeZoneResource1.Label" xml:space="preserve">
-    <value>Time Zone</value>
+    <value>{ES-MX}Time Zone</value>
   </data>
   <data name="LblCyclelist" xml:space="preserve">
-    <value>Billing Cycle</value>
+    <value>{ES-MX}Billing Cycle</value>
   </data>
   <data name="LblEndDayOfMonth" xml:space="preserve">
-    <value>End Day of Month</value>
+    <value>{ES-MX}End Day of Month</value>
   </data>
   <data name="LblEndDayOfWeek" xml:space="preserve">
-    <value>End Day of Week</value>
+    <value>{ES-MX}End Day of Week</value>
   </data>
   <data name="lblErrorMessageResource1.Text" xml:space="preserve">
-    <value>Error Messages</value>
+    <value>{ES-MX}Error Messages</value>
   </data>
   <data name="LblFirstEndDayOfMonth" xml:space="preserve">
-    <value>1st End Day of Month</value>
+    <value>{ES-MX}1st End Day of Month</value>
   </data>
   <data name="lblIsValidUsernameResource1.Text" xml:space="preserve">
-    <value>Invalid Username</value>
+    <value>{ES-MX}Invalid Username</value>
   </data>
   <data name="LblSecondEndDayOfMonth" xml:space="preserve">
-    <value>2nd End Day of Month</value>
+    <value>{ES-MX}2nd End Day of Month</value>
   </data>
   <data name="LblSelectInterval" xml:space="preserve">
-    <value>Select Interval</value>
+    <value>{ES-MX}Select Interval</value>
   </data>
   <data name="LblStartDay" xml:space="preserve">
-    <value>Start Day</value>
+    <value>{ES-MX}Start Day</value>
   </data>
   <data name="lblStartMonth" xml:space="preserve">
-    <value>Start Month</value>
+    <value>{ES-MX}Start Month</value>
   </data>
   <data name="lblUsernameOKResource1.Text" xml:space="preserve">
-    <value>User Name OK</value>
+    <value>{ES-MX}User Name OK</value>
   </data>
   <data name="ListItemResource1.Text" xml:space="preserve">
-    <value>None</value>
+    <value>{ES-MX}None</value>
   </data>
   <data name="ListItemResource2.Text" xml:space="preserve">
-    <value>US English</value>
+    <value>{ES-MX}US English</value>
   </data>
   <data name="MTSection2Resource1.Text" xml:space="preserve">
-    <value>Login Information</value>
+    <value>{ES-MX}Login Information</value>
   </data>
   <data name="MTSection3Resource1.Text" xml:space="preserve">
-    <value>Account Information</value>
+    <value>{ES-MX}Account Information</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Add Partition</value>
+    <value>{ES-MX}Add Partition</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet</value>
+    <value>{ES-MX}MetraNet</value>
   </data>
   <data name="tbAncestorAccountResource1.Label" xml:space="preserve">
-    <value>Parent Account</value>
+    <value>Cuenta primaria</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirm Password</value>
+    <value>{ES-MX}Confirm Password</value>
   </data>
   <data name="tbOtherResource1.Label" xml:space="preserve">
-    <value>Other</value>
+    <value>{ES-MX}Other</value>
   </data>
   <data name="tbPasswordResource1.Label" xml:space="preserve">
-    <value>Password</value>
+    <value>{ES-MX}Password</value>
   </data>
   <data name="tbPasswordResource1.XType" xml:space="preserve">
-    <value>PasswordMeter</value>
+    <value>{ES-MX}PasswordMeter</value>
   </data>
   <data name="tbPayerResource1.Label" xml:space="preserve">
-    <value>Payer</value>
+    <value>Pagador</value>
   </data>
   <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
-    <value>Security Answer</value>
+    <value>{ES-MX}Security Answer</value>
   </data>
   <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
-    <value>Custom Security Question</value>
+    <value>{ES-MX}Custom Security Question</value>
   </data>
   <data name="tbStartDateResource1.Label" xml:space="preserve">
-    <value>Account Start Date</value>
+    <value>{ES-MX}Account Start Date</value>
   </data>
   <data name="tbTaxExemptIDResource1.Label" xml:space="preserve">
-    <value>Tax Exempt ID</value>
+    <value>{ES-MX}Tax Exempt ID</value>
   </data>
   <data name="tbTaxExemptIDResource1.XType" xml:space="preserve">
-    <value>TextField</value>
+    <value>{ES-MX}TextField</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
-    <value>User Name</value>
+    <value>{ES-MX}User Name</value>
   </data>
   <data name="MTSection5Resource1.Text" xml:space="preserve">
-    <value>Containers to be created</value>
+    <value>{ES-MX}Containers to be created</value>
   </data>
   <data name="cbChannelsResource1.BoxLabel" xml:space="preserve">
-    <value>Channels</value>
+    <value>{ES-MX}Channels</value>
   </data>
   <data name="cbResellersResource1.BoxLabel" xml:space="preserve">
-    <value>Resellers</value>
+    <value>{ES-MX}Resellers</value>
   </data>
   <data name="cbRetailResource1.BoxLabel" xml:space="preserve">
-    <value>Retail</value>
+    <value>{ES-MX}Retail</value>
   </data>
   <data name="cbSystemUsersResource1.BoxLabel" xml:space="preserve">
-    <value>System Users</value>
+    <value>{ES-MX}System Users</value>
   </data>
   <data name="cbVendorsResource1.BoxLabel" xml:space="preserve">
-    <value>Vendors</value>
+    <value>{ES-MX}Vendors</value>
   </data>
 </root>
