--- a/Partition/App_LocalResources/AddPartition.aspx.pt-br.resx
+++ b/Partition/App_LocalResources/AddPartition.aspx.pt-br.resx
@@ -306,165 +306,165 @@
     <value>0</value>
   </data>
   <data name="btnGeneratePasswordResource1.Text" xml:space="preserve">
-    <value>Generate</value>
+    <value>{PT-BR}Generate</value>
   </data>
   <data name="btnGeneratePasswordResource1.Tooltip" xml:space="preserve">
-    <value>Generate Password</value>
+    <value>{PT-BR}Generate Password</value>
   </data>
   <data name="btnValidateResource1.Text" xml:space="preserve">
-    <value>Validate</value>
+    <value>{PT-BR}Validate</value>
   </data>
   <data name="btnValidateResource1.Tooltip" xml:space="preserve">
-    <value>Validate User Name</value>
+    <value>{PT-BR}Validate User Name</value>
   </data>
   <data name="cbApplyDefaultPolicyResource1.BoxLabel" xml:space="preserve">
-    <value>Apply Default Policy</value>
+    <value>{PT-BR}Apply Default Policy</value>
   </data>
   <data name="cbApplyTemplateResource1.BoxLabel" xml:space="preserve">
-    <value>Apply Template</value>
+    <value>{PT-BR}Apply Template</value>
   </data>
   <data name="cbBillableResource1.BoxLabel" xml:space="preserve">
-    <value>Billable</value>
+    <value>{PT-BR}Billable</value>
   </data>
   <data name="cbEmailNotificationResource1.BoxLabel" xml:space="preserve">
-    <value>E-Mail Notification</value>
+    <value>{PT-BR}E-Mail Notification</value>
   </data>
   <data name="cbTaxExemptResource1.BoxLabel" xml:space="preserve">
-    <value>Tax Exempt</value>
+    <value>{PT-BR}Tax Exempt</value>
   </data>
   <data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
-    <value>Authentication Type</value>
+    <value>{PT-BR}Authentication Type</value>
   </data>
   <data name="ddBillingCycleControl1Resource1.Label" xml:space="preserve">
-    <value>Billing Cycle</value>
+    <value>{PT-BR}Billing Cycle</value>
   </data>
   <data name="ddBrandedSiteResource1.Label" xml:space="preserve">
-    <value>Branded Site</value>
+    <value>{PT-BR}Branded Site</value>
   </data>
   <data name="ddCurrencyResource1.Label" xml:space="preserve">
-    <value>Currency</value>
+    <value>{PT-BR}Currency</value>
   </data>
   <data name="ddLanguageResource1.Label" xml:space="preserve">
-    <value>Language</value>
+    <value>{PT-BR}Language</value>
   </data>
   <data name="ddPaperInvoiceResource1.Label" xml:space="preserve">
-    <value>Paper Invoice</value>
+    <value>{PT-BR}Paper Invoice</value>
   </data>
   <data name="ddPriceListResource1.Label" xml:space="preserve">
-    <value>Price List</value>
+    <value>{PT-BR}Price List</value>
   </data>
   <data name="ddSecurityQuestionResource1.Label" xml:space="preserve">
-    <value>Security Question</value>
+    <value>{PT-BR}Security Question</value>
   </data>
   <data name="ddStatusReasonResource1.Label" xml:space="preserve">
-    <value>Status Reason</value>
+    <value>{PT-BR}Status Reason</value>
   </data>
   <data name="ddTimeZoneResource1.Label" xml:space="preserve">
-    <value>Time Zone</value>
+    <value>{PT-BR}Time Zone</value>
   </data>
   <data name="LblCyclelist" xml:space="preserve">
-    <value>Billing Cycle</value>
+    <value>{PT-BR}Billing Cycle</value>
   </data>
   <data name="LblEndDayOfMonth" xml:space="preserve">
-    <value>End Day of Month</value>
+    <value>{PT-BR}End Day of Month</value>
   </data>
   <data name="LblEndDayOfWeek" xml:space="preserve">
-    <value>End Day of Week</value>
+    <value>{PT-BR}End Day of Week</value>
   </data>
   <data name="lblErrorMessageResource1.Text" xml:space="preserve">
-    <value>Error Messages</value>
+    <value>{PT-BR}Error Messages</value>
   </data>
   <data name="LblFirstEndDayOfMonth" xml:space="preserve">
-    <value>1st End Day of Month</value>
+    <value>{PT-BR}1st End Day of Month</value>
   </data>
   <data name="lblIsValidUsernameResource1.Text" xml:space="preserve">
-    <value>Invalid Username</value>
+    <value>{PT-BR}Invalid Username</value>
   </data>
   <data name="LblSecondEndDayOfMonth" xml:space="preserve">
-    <value>2nd End Day of Month</value>
+    <value>{PT-BR}2nd End Day of Month</value>
   </data>
   <data name="LblSelectInterval" xml:space="preserve">
-    <value>Select Interval</value>
+    <value>{PT-BR}Select Interval</value>
   </data>
   <data name="LblStartDay" xml:space="preserve">
-    <value>Start Day</value>
+    <value>{PT-BR}Start Day</value>
   </data>
   <data name="lblStartMonth" xml:space="preserve">
-    <value>Start Month</value>
+    <value>{PT-BR}Start Month</value>
   </data>
   <data name="lblUsernameOKResource1.Text" xml:space="preserve">
-    <value>User Name OK</value>
+    <value>{PT-BR}User Name OK</value>
   </data>
   <data name="ListItemResource1.Text" xml:space="preserve">
-    <value>None</value>
+    <value>{PT-BR}None</value>
   </data>
   <data name="ListItemResource2.Text" xml:space="preserve">
-    <value>US English</value>
+    <value>{PT-BR}US English</value>
   </data>
   <data name="MTSection2Resource1.Text" xml:space="preserve">
-    <value>Login Information</value>
+    <value>{PT-BR}Login Information</value>
   </data>
   <data name="MTSection3Resource1.Text" xml:space="preserve">
-    <value>Account Information</value>
+    <value>{PT-BR}Account Information</value>
   </data>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Add Partition</value>
+    <value>{PT-BR}Add Partition</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
-    <value>MetraNet</value>
+    <value>{PT-BR}MetraNet</value>
   </data>
   <data name="tbAncestorAccountResource1.Label" xml:space="preserve">
-    <value>Parent Account</value>
+    <value>Conta pai</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirm Password</value>
+    <value>{PT-BR}Confirm Password</value>
   </data>
   <data name="tbOtherResource1.Label" xml:space="preserve">
-    <value>Other</value>
+    <value>{PT-BR}Other</value>
   </data>
   <data name="tbPasswordResource1.Label" xml:space="preserve">
-    <value>Password</value>
+    <value>{PT-BR}Password</value>
   </data>
   <data name="tbPasswordResource1.XType" xml:space="preserve">
-    <value>PasswordMeter</value>
+    <value>{PT-BR}PasswordMeter</value>
   </data>
   <data name="tbPayerResource1.Label" xml:space="preserve">
-    <value>Payer</value>
+    <value>Pagador</value>
   </data>
   <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
-    <value>Security Answer</value>
+    <value>{PT-BR}Security Answer</value>
   </data>
   <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
-    <value>Custom Security Question</value>
+    <value>{PT-BR}Custom Security Question</value>
   </data>
   <data name="tbStartDateResource1.Label" xml:space="preserve">
-    <value>Account Start Date</value>
+    <value>{PT-BR}Account Start Date</value>
   </data>
   <data name="tbTaxExemptIDResource1.Label" xml:space="preserve">
-    <value>Tax Exempt ID</value>
+    <value>{PT-BR}Tax Exempt ID</value>
   </data>
   <data name="tbTaxExemptIDResource1.XType" xml:space="preserve">
-    <value>TextField</value>
+    <value>{PT-BR}TextField</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
-    <value>User Name</value>
+    <value>{PT-BR}User Name</value>
   </data>
   <data name="MTSection5Resource1.Text" xml:space="preserve">
-    <value>Containers to be created</value>
+    <value>{PT-BR}Containers to be created</value>
   </data>
   <data name="cbChannelsResource1.BoxLabel" xml:space="preserve">
-    <value>Channels</value>
+    <value>{PT-BR}Channels</value>
   </data>
   <data name="cbResellersResource1.BoxLabel" xml:space="preserve">
-    <value>Resellers</value>
+    <value>{PT-BR}Resellers</value>
   </data>
   <data name="cbRetailResource1.BoxLabel" xml:space="preserve">
-    <value>Retail</value>
+    <value>{PT-BR}Retail</value>
   </data>
   <data name="cbSystemUsersResource1.BoxLabel" xml:space="preserve">
-    <value>System Users</value>
+    <value>{PT-BR}System Users</value>
   </data>
   <data name="cbVendorsResource1.BoxLabel" xml:space="preserve">
-    <value>Vendors</value>
+    <value>{PT-BR}Vendors</value>
   </data>
 </root>
