--- a/RMP/UI/MetraNet/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.de.resx
+++ b/RMP/UI/MetraNet/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.de.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-    <!-- 
+  <!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -59,167 +59,182 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-        <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-        <xsd:element name="root" msdata:IsDataSet="true">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
             <xsd:complexType>
-                <xsd:choice maxOccurs="unbounded">
-                    <xsd:element name="metadata">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" use="required" type="xsd:string" />
-                            <xsd:attribute name="type" type="xsd:string" />
-                            <xsd:attribute name="mimetype" type="xsd:string" />
-                            <xsd:attribute ref="xml:space" />
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="assembly">
-                        <xsd:complexType>
-                            <xsd:attribute name="alias" type="xsd:string" />
-                            <xsd:attribute name="name" type="xsd:string" />
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="data">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-                            <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-                            <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-                            <xsd:attribute ref="xml:space" />
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="resheader">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required" />
-                        </xsd:complexType>
-                    </xsd:element>
-                </xsd:choice>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
-        </xsd:element>
-    </xsd:schema>
-    <resheader name="resmimetype">
-        <value>text/microsoft-resx</value>
-    </resheader>
-    <resheader name="version">
-        <value>2.0</value>
-    </resheader>
-    <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <data name="GRID_TITLE" xml:space="preserve">
-        <value>Sonstige Anpassungen verwalten</value>
-    </data>
-    <data name="MTFilterGrid1Resource1.ToolTip" xml:space="preserve">
-        <value>Sonstige Anpassungen verwalten</value>
-    </data>
-    <data name="NO_RECORDS_TEXT" xml:space="preserve">
-        <value>Es wurden keine Datensätze gefunden.</value>
-    </data>
-    <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet - Sonstige Anpassungen verwalten</value>
-    </data>
-    <data name="TEXT_ACCOUNT_ID" xml:space="preserve">
-        <value>Accountkennung</value>
-    </data>
-    <data name="TEXT_ADJUSTMENT_AMOUNT" xml:space="preserve">
-        <value>Anpassungsbetrag</value>
-    </data>
-    <data name="TEXT_ADJUSTMENT_CREATE_DATE" xml:space="preserve">
-        <value>Erstellungsdatum der Anpassung</value>
-    </data>
-    <data name="TEXT_AMOUNT" xml:space="preserve">
-        <value>Betrag</value>
-    </data>
-    <data name="TEXT_AMOUNT_WITH_TAX" xml:space="preserve">
-        <value>Betrag einschl. Steuern</value>
-    </data>
-    <data name="TEXT_APPROVE" xml:space="preserve">
-        <value>Ausgewählte genehmigen</value>
-    </data>
-    <data name="TEXT_APPROVE_ALL" xml:space="preserve">
-        <value>Alle genehmigen</value>
-    </data>
-    <data name="TEXT_APPROVE_STATUS" xml:space="preserve">
-        <value>Genehmigt</value>
-    </data>
-    <data name="TEXT_CONTENTION_SESSION_ID" xml:space="preserve">
-        <value>Konflikt Sitzungs-ID</value>
-    </data>
-    <data name="TEXT_CURRENCY" xml:space="preserve">
-        <value>Währung</value>
-    </data>
-    <data name="TEXT_DENY" xml:space="preserve">
-        <value>Ausgewählte verweigern</value>
-    </data>
-    <data name="TEXT_DENY_ALL" xml:space="preserve">
-        <value>Alle verweigern</value>
-    </data>
-    <data name="TEXT_DENY_ALL_CONFIRM" xml:space="preserve">
-        <value>Möchten Sie wirklich fortfahren?  Durch diesen Schritt werden alle Anpassungen verweigert, die mit Ihren Filterkriterien übereinstimmen.  Wenn keine Filter vorhanden sind, werden alle Anpassungen verweigert.</value>
-    </data>
-    <data name="TEXT_DESCRIPTION" xml:space="preserve">
-        <value>Beschreibung</value>
-    </data>
-    <data name="TEXT_EMAIL_ADDRESS" xml:space="preserve">
-        <value>E-Mail-Adresse</value>
-    </data>
-    <data name="TEXT_EMAIL_NOTIFICATION" xml:space="preserve">
-        <value>E-Mail-Benachrichtigung</value>
-    </data>
-    <data name="TEXT_ERROR" xml:space="preserve">
-        <value>Bei der Bearbeitung der sonstigen Anpassung ist ein Fehler aufgetreten.</value>
-    </data>
-    <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
-        <value>Guide Interval Id</value>
-    </data>
-    <data name="TEXT_INTERVAL_ID" xml:space="preserve">
-        <value>Intervall-ID</value>
-    </data>
-    <data name="TEXT_NO_IDS" xml:space="preserve">
-        <value>Bitte wählen Sie Anpassungen zur Bearbeitung aus.</value>
-    </data>
-    <data name="TEXT_OTHER" xml:space="preserve">
-        <value>Andere</value>
-    </data>
-    <data name="TEXT_PENDING_STATUS" xml:space="preserve">
-        <value>Ausstehend</value>
-    </data>
-    <data name="TEXT_REASON" xml:space="preserve">
-        <value>Ursache</value>
-    </data>
-    <data name="TEXT_SESSION_ID" xml:space="preserve">
-        <value>Sitzungs-ID</value>
-    </data>
-    <data name="TEXT_SESSION_TYPE" xml:space="preserve">
-        <value>Sitzungstyp</value>
-    </data>
-    <data name="TEXT_STATUS" xml:space="preserve">
-        <value>Status</value>
-    </data>
-    <data name="TEXT_SUBSCRIBER_ACCOUNT_ID" xml:space="preserve">
-        <value>Teilnehmerkonto-ID</value>
-    </data>
-    <data name="TEXT_SUCCESS" xml:space="preserve">
-        <value>Die sonstige Anpassung wurde erfolgreich bearbeitet.</value>
-    </data>
-    <data name="TEXT_TAX_AMOUNT" xml:space="preserve">
-        <value>Steuerbetrag</value>
-    </data>
-    <data name="TEXT_TIMESTAMP" xml:space="preserve">
-        <value>Zeitstempel</value>
-    </data>
-    <data name="TEXT_VIEW_ID" xml:space="preserve">
-        <value>Ansichts-ID</value>
-    </data>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="GRID_TITLE" xml:space="preserve">
+    <value>Sonstige Anpassungen verwalten</value>
+  </data>
+  <data name="MTFilterGrid1Resource1.ToolTip" xml:space="preserve">
+    <value>Sonstige Anpassungen verwalten</value>
+  </data>
+  <data name="NO_RECORDS_TEXT" xml:space="preserve">
+    <value>Es wurden keine Datensätze gefunden.</value>
+  </data>
+  <data name="PageResource1.Title" xml:space="preserve">
+    <value>MetraNet - Sonstige Anpassungen verwalten</value>
+  </data>
+  <data name="TEXT_ACCOUNT_ID" xml:space="preserve">
+    <value>Accountkennung</value>
+  </data>
+  <data name="TEXT_ADJUSTMENT_AMOUNT" xml:space="preserve">
+    <value>Anpassungsbetrag</value>
+  </data>
+  <data name="TEXT_ADJUSTMENT_CREATE_DATE" xml:space="preserve">
+    <value>Erstellungsdatum der Anpassung</value>
+  </data>
+  <data name="TEXT_AMOUNT" xml:space="preserve">
+    <value>Betrag</value>
+  </data>
+  <data name="TEXT_AMOUNT_WITH_TAX" xml:space="preserve">
+    <value>Betrag einschl. Steuern</value>
+  </data>
+  <data name="TEXT_APPROVE" xml:space="preserve">
+    <value>Ausgewählte genehmigen</value>
+  </data>
+  <data name="TEXT_APPROVE_ALL" xml:space="preserve">
+    <value>Alle genehmigen</value>
+  </data>
+  <data name="TEXT_APPROVE_STATUS" xml:space="preserve">
+    <value>Genehmigt</value>
+  </data>
+  <data name="TEXT_CONTENTION_SESSION_ID" xml:space="preserve">
+    <value>Konflikt Sitzungs-ID</value>
+  </data>
+  <data name="TEXT_COUNTY_AMOUNT" xml:space="preserve">
+    <value>[de] Tax County</value>
+  </data>
+  <data name="TEXT_CURRENCY" xml:space="preserve">
+    <value>Währung</value>
+  </data>
+  <data name="TEXT_DENY" xml:space="preserve">
+    <value>Ausgewählte verweigern</value>
+  </data>
+  <data name="TEXT_DENY_ALL" xml:space="preserve">
+    <value>Alle verweigern</value>
+  </data>
+  <data name="TEXT_DENY_ALL_CONFIRM" xml:space="preserve">
+    <value>Möchten Sie wirklich fortfahren?  Durch diesen Schritt werden alle Anpassungen verweigert, die mit Ihren Filterkriterien übereinstimmen.  Wenn keine Filter vorhanden sind, werden alle Anpassungen verweigert.</value>
+  </data>
+  <data name="TEXT_DESCRIPTION" xml:space="preserve">
+    <value>[de] Internal Beschreibung</value>
+  </data>
+  <data name="TEXT_EMAIL_ADDRESS" xml:space="preserve">
+    <value>E-Mail-Adresse</value>
+  </data>
+  <data name="TEXT_EMAIL_NOTIFICATION" xml:space="preserve">
+    <value>E-Mail-Benachrichtigung</value>
+  </data>
+  <data name="TEXT_ERROR" xml:space="preserve">
+    <value>Bei der Bearbeitung der sonstigen Anpassung ist ein Fehler aufgetreten.</value>
+  </data>
+  <data name="TEXT_FEDERAL_AMOUNT" xml:space="preserve">
+    <value>[de] Tax Federal</value>
+  </data>
+  <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
+    <value>Guide Interval Id</value>
+  </data>
+  <data name="TEXT_INTERVAL_ID" xml:space="preserve">
+    <value>Intervall-ID</value>
+  </data>
+  <data name="TEXT_LOCAL_AMOUNT" xml:space="preserve">
+    <value>[de] Tax Local</value>
+  </data>
+  <data name="TEXT_NO_IDS" xml:space="preserve">
+    <value>Bitte wählen Sie Anpassungen zur Bearbeitung aus.</value>
+  </data>
+  <data name="TEXT_OTHER" xml:space="preserve">
+    <value>Andere</value>
+  </data>
+  <data name="TEXT_OTHER_AMOUNT" xml:space="preserve">
+    <value>[de] Tax Other</value>
+  </data>
+  <data name="TEXT_PENDING_STATUS" xml:space="preserve">
+    <value>Ausstehend</value>
+  </data>
+  <data name="TEXT_REASON" xml:space="preserve">
+    <value>Ursache</value>
+  </data>
+  <data name="TEXT_SESSION_ID" xml:space="preserve">
+    <value>Sitzungs-ID</value>
+  </data>
+  <data name="TEXT_SESSION_TYPE" xml:space="preserve">
+    <value>Sitzungstyp</value>
+  </data>
+  <data name="TEXT_STATE_AMOUNT" xml:space="preserve">
+    <value>[de] Tax State</value>
+  </data>
+  <data name="TEXT_STATUS" xml:space="preserve">
+    <value>Status</value>
+  </data>
+  <data name="TEXT_SUBSCRIBER_ACCOUNT_ID" xml:space="preserve">
+    <value>Teilnehmerkonto-ID</value>
+  </data>
+  <data name="TEXT_SUCCESS" xml:space="preserve">
+    <value>Die sonstige Anpassung wurde erfolgreich bearbeitet.</value>
+  </data>
+  <data name="TEXT_TAX_AMOUNT" xml:space="preserve">
+    <value>Steuerbetrag</value>
+  </data>
+  <data name="TEXT_TIMESTAMP" xml:space="preserve">
+    <value>Zeitstempel</value>
+  </data>
+  <data name="TEXT_VIEW_ID" xml:space="preserve">
+    <value>Ansichts-ID</value>
+  </data>
 </root>
