--- a/RMP/UI/MetraNet/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.es.resx
+++ b/RMP/UI/MetraNet/Adjustments/App_LocalResources/ManageMiscellaneousAdjustments.aspx.es.resx
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-    <!-- 
+  <!-- 
     Microsoft ResX Schema 
     
     Version 2.0
@@ -59,167 +59,182 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-        <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-        <xsd:element name="root" msdata:IsDataSet="true">
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
             <xsd:complexType>
-                <xsd:choice maxOccurs="unbounded">
-                    <xsd:element name="metadata">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" use="required" type="xsd:string" />
-                            <xsd:attribute name="type" type="xsd:string" />
-                            <xsd:attribute name="mimetype" type="xsd:string" />
-                            <xsd:attribute ref="xml:space" />
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="assembly">
-                        <xsd:complexType>
-                            <xsd:attribute name="alias" type="xsd:string" />
-                            <xsd:attribute name="name" type="xsd:string" />
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="data">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-                            <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-                            <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-                            <xsd:attribute ref="xml:space" />
-                        </xsd:complexType>
-                    </xsd:element>
-                    <xsd:element name="resheader">
-                        <xsd:complexType>
-                            <xsd:sequence>
-                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                            </xsd:sequence>
-                            <xsd:attribute name="name" type="xsd:string" use="required" />
-                        </xsd:complexType>
-                    </xsd:element>
-                </xsd:choice>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
-        </xsd:element>
-    </xsd:schema>
-    <resheader name="resmimetype">
-        <value>text/microsoft-resx</value>
-    </resheader>
-    <resheader name="version">
-        <value>2.0</value>
-    </resheader>
-    <resheader name="reader">
-        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <resheader name="writer">
-        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-    </resheader>
-    <data name="GRID_TITLE" xml:space="preserve">
-        <value>Gestionar ajustes variados</value>
-    </data>
-    <data name="MTFilterGrid1Resource1.ToolTip" xml:space="preserve">
-        <value>Gestionar ajustes variados</value>
-    </data>
-    <data name="NO_RECORDS_TEXT" xml:space="preserve">
-        <value>No se ha encontrado ningún registro.</value>
-    </data>
-    <data name="PageResource1.Title" xml:space="preserve">
-        <value>MetraNet: gestionar ajustes variados</value>
-    </data>
-    <data name="TEXT_ACCOUNT_ID" xml:space="preserve">
-        <value>ID de cuenta</value>
-    </data>
-    <data name="TEXT_ADJUSTMENT_AMOUNT" xml:space="preserve">
-        <value>Cuantía del ajuste</value>
-    </data>
-    <data name="TEXT_ADJUSTMENT_CREATE_DATE" xml:space="preserve">
-        <value>Fecha de creación del ajuste</value>
-    </data>
-    <data name="TEXT_AMOUNT" xml:space="preserve">
-        <value>Importe</value>
-    </data>
-    <data name="TEXT_AMOUNT_WITH_TAX" xml:space="preserve">
-        <value>Importe (impuestos incluidos)</value>
-    </data>
-    <data name="TEXT_APPROVE" xml:space="preserve">
-        <value>Aprobar seleccionada</value>
-    </data>
-    <data name="TEXT_APPROVE_ALL" xml:space="preserve">
-        <value>Aprobar todos</value>
-    </data>
-    <data name="TEXT_APPROVE_STATUS" xml:space="preserve">
-        <value>Aprobada</value>
-    </data>
-    <data name="TEXT_CONTENTION_SESSION_ID" xml:space="preserve">
-        <value>ID de sesión de contención</value>
-    </data>
-    <data name="TEXT_CURRENCY" xml:space="preserve">
-        <value>Divisa</value>
-    </data>
-    <data name="TEXT_DENY" xml:space="preserve">
-        <value>Rechazar seleccionado(s)</value>
-    </data>
-    <data name="TEXT_DENY_ALL" xml:space="preserve">
-        <value>Rechazar todo(s)</value>
-    </data>
-    <data name="TEXT_DENY_ALL_CONFIRM" xml:space="preserve">
-        <value>¿Seguro que desea continuar?  Esta acción rechazará todos los ajustes que coincidan con los criterios establecidos en los filtros.  Si no se ha aplicado ningún filtro, entonces se rechazarán todos los ajustes introducidos.</value>
-    </data>
-    <data name="TEXT_DESCRIPTION" xml:space="preserve">
-        <value>Descripción</value>
-    </data>
-    <data name="TEXT_EMAIL_ADDRESS" xml:space="preserve">
-        <value>Dirección de correo electrónico</value>
-    </data>
-    <data name="TEXT_EMAIL_NOTIFICATION" xml:space="preserve">
-        <value>Notificación por correo electrónico</value>
-    </data>
-    <data name="TEXT_ERROR" xml:space="preserve">
-        <value>Se produjo un error al procesar el ajuste variado.</value>
-    </data>
-    <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
-        <value>ID de intervalo de guía</value>
-    </data>
-    <data name="TEXT_INTERVAL_ID" xml:space="preserve">
-        <value>ID de intervalo</value>
-    </data>
-    <data name="TEXT_NO_IDS" xml:space="preserve">
-        <value>Seleccione los ajustes que se deberán procesar.</value>
-    </data>
-    <data name="TEXT_OTHER" xml:space="preserve">
-        <value>Otro</value>
-    </data>
-    <data name="TEXT_PENDING_STATUS" xml:space="preserve">
-        <value>Pendiente</value>
-    </data>
-    <data name="TEXT_REASON" xml:space="preserve">
-        <value>Motivo</value>
-    </data>
-    <data name="TEXT_SESSION_ID" xml:space="preserve">
-        <value>ID de sesión</value>
-    </data>
-    <data name="TEXT_SESSION_TYPE" xml:space="preserve">
-        <value>Tipo de sesión</value>
-    </data>
-    <data name="TEXT_STATUS" xml:space="preserve">
-        <value>Estado</value>
-    </data>
-    <data name="TEXT_SUBSCRIBER_ACCOUNT_ID" xml:space="preserve">
-        <value>Identificación del suscriptor de la cuenta</value>
-    </data>
-    <data name="TEXT_SUCCESS" xml:space="preserve">
-        <value>El ajuste variado se procesó correctamente.</value>
-    </data>
-    <data name="TEXT_TAX_AMOUNT" xml:space="preserve">
-        <value>Importe del impuesto</value>
-    </data>
-    <data name="TEXT_TIMESTAMP" xml:space="preserve">
-        <value>Marca horaria</value>
-    </data>
-    <data name="TEXT_VIEW_ID" xml:space="preserve">
-        <value>Ver ID</value>
-    </data>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="GRID_TITLE" xml:space="preserve">
+    <value>Gestionar ajustes variados</value>
+  </data>
+  <data name="MTFilterGrid1Resource1.ToolTip" xml:space="preserve">
+    <value>Gestionar ajustes variados</value>
+  </data>
+  <data name="NO_RECORDS_TEXT" xml:space="preserve">
+    <value>No se ha encontrado ningún registro.</value>
+  </data>
+  <data name="PageResource1.Title" xml:space="preserve">
+    <value>MetraNet: gestionar ajustes variados</value>
+  </data>
+  <data name="TEXT_ACCOUNT_ID" xml:space="preserve">
+    <value>ID de cuenta</value>
+  </data>
+  <data name="TEXT_ADJUSTMENT_AMOUNT" xml:space="preserve">
+    <value>Cuantía del ajuste</value>
+  </data>
+  <data name="TEXT_ADJUSTMENT_CREATE_DATE" xml:space="preserve">
+    <value>Fecha de creación del ajuste</value>
+  </data>
+  <data name="TEXT_AMOUNT" xml:space="preserve">
+    <value>Importe</value>
+  </data>
+  <data name="TEXT_AMOUNT_WITH_TAX" xml:space="preserve">
+    <value>Importe (impuestos incluidos)</value>
+  </data>
+  <data name="TEXT_APPROVE" xml:space="preserve">
+    <value>Aprobar seleccionada</value>
+  </data>
+  <data name="TEXT_APPROVE_ALL" xml:space="preserve">
+    <value>Aprobar todos</value>
+  </data>
+  <data name="TEXT_APPROVE_STATUS" xml:space="preserve">
+    <value>Aprobada</value>
+  </data>
+  <data name="TEXT_CONTENTION_SESSION_ID" xml:space="preserve">
+    <value>ID de sesión de contención</value>
+  </data>
+  <data name="TEXT_COUNTY_AMOUNT" xml:space="preserve">
+    <value>[es] Tax County</value>
+  </data>
+  <data name="TEXT_CURRENCY" xml:space="preserve">
+    <value>Divisa</value>
+  </data>
+  <data name="TEXT_DENY" xml:space="preserve">
+    <value>Rechazar seleccionado(s)</value>
+  </data>
+  <data name="TEXT_DENY_ALL" xml:space="preserve">
+    <value>Rechazar todo(s)</value>
+  </data>
+  <data name="TEXT_DENY_ALL_CONFIRM" xml:space="preserve">
+    <value>¿Seguro que desea continuar?  Esta acción rechazará todos los ajustes que coincidan con los criterios establecidos en los filtros.  Si no se ha aplicado ningún filtro, entonces se rechazarán todos los ajustes introducidos.</value>
+  </data>
+  <data name="TEXT_DESCRIPTION" xml:space="preserve">
+    <value>[es] Internal Descripción</value>
+  </data>
+  <data name="TEXT_EMAIL_ADDRESS" xml:space="preserve">
+    <value>Dirección de correo electrónico</value>
+  </data>
+  <data name="TEXT_EMAIL_NOTIFICATION" xml:space="preserve">
+    <value>Notificación por correo electrónico</value>
+  </data>
+  <data name="TEXT_ERROR" xml:space="preserve">
+    <value>Se produjo un error al procesar el ajuste variado.</value>
+  </data>
+  <data name="TEXT_FEDERAL_AMOUNT" xml:space="preserve">
+    <value>[es] Tax Federal</value>
+  </data>
+  <data name="TEXT_GUIDE_INTERVAL_ID" xml:space="preserve">
+    <value>ID de intervalo de guía</value>
+  </data>
+  <data name="TEXT_INTERVAL_ID" xml:space="preserve">
+    <value>ID de intervalo</value>
+  </data>
+  <data name="TEXT_LOCAL_AMOUNT" xml:space="preserve">
+    <value>[es] Tax Local</value>
+  </data>
+  <data name="TEXT_NO_IDS" xml:space="preserve">
+    <value>Seleccione los ajustes que se deberán procesar.</value>
+  </data>
+  <data name="TEXT_OTHER" xml:space="preserve">
+    <value>Otro</value>
+  </data>
+  <data name="TEXT_OTHER_AMOUNT" xml:space="preserve">
+    <value>[es] Tax Other</value>
+  </data>
+  <data name="TEXT_PENDING_STATUS" xml:space="preserve">
+    <value>Pendiente</value>
+  </data>
+  <data name="TEXT_REASON" xml:space="preserve">
+    <value>Motivo</value>
+  </data>
+  <data name="TEXT_SESSION_ID" xml:space="preserve">
+    <value>ID de sesión</value>
+  </data>
+  <data name="TEXT_SESSION_TYPE" xml:space="preserve">
+    <value>Tipo de sesión</value>
+  </data>
+  <data name="TEXT_STATE_AMOUNT" xml:space="preserve">
+    <value>[es] Tax State</value>
+  </data>
+  <data name="TEXT_STATUS" xml:space="preserve">
+    <value>Estado</value>
+  </data>
+  <data name="TEXT_SUBSCRIBER_ACCOUNT_ID" xml:space="preserve">
+    <value>Identificación del suscriptor de la cuenta</value>
+  </data>
+  <data name="TEXT_SUCCESS" xml:space="preserve">
+    <value>El ajuste variado se procesó correctamente.</value>
+  </data>
+  <data name="TEXT_TAX_AMOUNT" xml:space="preserve">
+    <value>Importe del impuesto</value>
+  </data>
+  <data name="TEXT_TIMESTAMP" xml:space="preserve">
+    <value>Marca horaria</value>
+  </data>
+  <data name="TEXT_VIEW_ID" xml:space="preserve">
+    <value>Ver ID</value>
+  </data>
 </root>
