--- a/RMP/UI/MetraNet/App_GlobalResources/MainMenu.fr.resx
+++ b/RMP/UI/MetraNet/App_GlobalResources/MainMenu.fr.resx
@@ -249,6 +249,9 @@
   <data name="TEXT_CREATE_BACKOUT_RERUN" xml:space="preserve">
     <value>Créer une annulation/réexécution</value>
   </data>
+  <data name="TEXT_CREATE_CREDIT_NOTE" xml:space="preserve">
+        <value>{FR}Create Credit Note</value>
+    </data>
   <data name="TEXT_CREATE_NEW_REPORT_INSTANCE" xml:space="preserve">
     <value>Ajouter une nouvelle instance de rapport</value>
   </data>
@@ -328,7 +331,7 @@
     <value>Afficher toutes les entités</value>
   </data>
   <data name="TEXT_MACHINE_ROLES" xml:space="preserve">
-    <value>French</value>
+    <value>Rôles de machines</value>
   </data>
   <data name="TEXT_MAKE_PAYMENT" xml:space="preserve">
     <value>Effectuer un paiement</value>
@@ -366,6 +369,12 @@
   <data name="TEXT_MANAGE_SECURITY" xml:space="preserve">
     <value>Gérer la sécurité</value>
   </data>
+  <data name="TEXT_MANAGE_BILLSOFT_EXEMPTIONS" xml:space="preserve">
+    <value>Gérer BillSoft Exonérations</value>
+  </data>
+  <data name="TEXT_MANAGE_BILLSOFT_OVERRIDES" xml:space="preserve">
+    <value>Gérer BillSoft Remplacements</value>
+  </data>  
   <data name="TEXT_MENU_GENERATE_PASSWORD" xml:space="preserve">
     <value>Générer un mot de passe</value>
   </data>
@@ -558,6 +567,9 @@
   <data name="TEXT_VERSION_INFO" xml:space="preserve">
     <value>Informations sur la version</value>
   </data>
+  <data name="TEXT_VIEW_CREDIT_NOTES_ISSUED" xml:space="preserve">
+        <value>{FR}View Credit Notes Issued</value>
+    </data>
   <data name="TEXT_VIEW_METERING_STATISTICS" xml:space="preserve">
     <value>Afficher</value>
   </data>
@@ -568,15 +580,21 @@
     <value>Approvals</value>
   </data>
   <data name="TEXT_SHOW_ITEM_HISTORY" xml:space="preserve">
-    <value>View Item History</value>
+    <value>L'Histoire de l'élément</value>
   </data>
   <data name="TEXT_SHOW_ALL_CHANGES_SUMMARY" xml:space="preserve">
-    <value>View All Changes</value>
+    <value>Toutes les modifications</value>
   </data>
   <data name="TEXT_SHOW_PENDING_CHANGES_SUMMARY" xml:space="preserve">
-    <value>View Pending Changes</value>
+    <value>Les modifications en attente</value>
   </data>
   <data name="TEXT_SHOW_FAILED_CHANGES_SUMMARY" xml:space="preserve">
-    <value>View Failed Changes</value>
+    <value>Les modifications échoué</value>
   </data>
+  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
+    <value>Assigner les messages de la facture</value>
+  </data>
+   <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+        <value>[Fr]Add child Account</value>
+   </data>
 </root>
