--- a/RMP/UI/MetraNet/App_GlobalResources/MainMenu.pt-br.resx
+++ b/RMP/UI/MetraNet/App_GlobalResources/MainMenu.pt-br.resx
@@ -249,6 +249,9 @@
   <data name="TEXT_CREATE_BACKOUT_RERUN" xml:space="preserve">
     <value>Criar retornos/reexecuções</value>
   </data>
+  <data name="TEXT_CREATE_CREDIT_NOTE" xml:space="preserve">
+    <value>{PT-BR}Create Credit Note</value>
+  </data>
   <data name="TEXT_CREATE_NEW_REPORT_INSTANCE" xml:space="preserve">
     <value>Adicionar nova instância de relatório</value>
   </data>
@@ -558,6 +561,9 @@
   <data name="TEXT_VERSION_INFO" xml:space="preserve">
     <value>Informação da versão</value>
   </data>
+  <data name="TEXT_VIEW_CREDIT_NOTES_ISSUED" xml:space="preserve">
+    <value>{PT-BR}View Credit Notes Issued</value>
+  </data>
   <data name="TEXT_VIEW_METERING_STATISTICS" xml:space="preserve">
     <value>Exibir</value>
   </data>
@@ -587,5 +593,11 @@
   </data>
   <data name="TEXT_MANAGE_AMP_DECISIONS" xml:space="preserve">
     <value>Portuguese</value>
+  </data>
+  <data name="TEXT_ASSIGN_BILL_MESSAGES" xml:space="preserve">
+    <value>Portuguese</value>
+  </data>
+  <data name="TEXT_ADD_CHILD_ACCOUNT" xml:space="preserve">
+    <value>[pt-br]Add child Account</value>
   </data>
 </root>
