CORE-7813:Localization: Some items aren't localized. Localized Add Account page and Tax panel

--- a/Account/App_LocalResources/AddAccount.aspx.en-GB.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.en-GB.resx
@@ -243,8 +243,8 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Security Answer</value>
     </data>
-    <data name="tbSecurityQuestionTextResource1" xml:space="preserve">
-        <value></value>
+    <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
+        <value>Custom Security Question</value>
     </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
         <value>Account Start Date</value>
