--- a/Account/App_LocalResources/AddAccount.aspx.de.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.de.resx
@@ -243,7 +243,7 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Sicherheitsantwort</value>
     </data>
-    <data name="tbSecurityQuestionTextResource1" xml:space="preserve">
+    <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
         <value>Benutzerdefinierte Sicherheitsfrage</value>
     </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
