--- a/Account/App_LocalResources/AddAccount.aspx.es.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.es.resx
@@ -243,7 +243,7 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Respuesta de seguridad</value>
     </data>
-    <data name="tbSecurityQuestionTextResource1" xml:space="preserve">
+    <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
         <value>Pregunta de seguridad personalizada</value>
     </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
