--- a/Account/App_LocalResources/AddAccount.aspx.fr.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.fr.resx
@@ -243,7 +243,7 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Réponse à la question de sécurité</value>
     </data>
-    <data name="tbSecurityQuestionTextResource1" xml:space="preserve">
+    <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
         <value>Question de sécurité personnalisée</value>
     </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
@@ -260,5 +260,5 @@
     </data>
 	<data name="ddAuthenticationTypeResource1.Label" xml:space="preserve">
 		<value>Type d'authentification</value>
-    </data>
+    </data>	
 </root>
