--- a/Account/App_LocalResources/AddAccount.aspx.it.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.it.resx
@@ -243,7 +243,7 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Risposta di sicurezza</value>
     </data>
-    <data name="tbSecurityQuestionTextResource1" xml:space="preserve">
+    <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
         <value>Domanda di sicurezza personalizzata</value>
     </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
