--- a/Account/App_LocalResources/AddAccount.aspx.pt-br.resx
+++ b/Account/App_LocalResources/AddAccount.aspx.pt-br.resx
@@ -243,7 +243,7 @@
     <data name="tbSecurityAnswerResource1.Label" xml:space="preserve">
         <value>Resposta de segurança</value>
     </data>
-    <data name="tbSecurityQuestionTextResource1" xml:space="preserve">
+    <data name="tbSecurityQuestionTextResource1.Label" xml:space="preserve">
         <value>Pergunta de segurança personalizada</value>
     </data>
     <data name="tbStartDateResource1.Label" xml:space="preserve">
