--- a/App_GlobalResources/Resource.de.resx
+++ b/App_GlobalResources/Resource.de.resx
@@ -567,4 +567,40 @@
   <data name="LOG_FOR_QUOTES" xml:space="preserve">
     <value>Quote log</value>
   </data>
+  <data name="TEXT_TAX" xml:space="preserve">
+    <value>{DE}Tax</value>
+  </data>
+  <data name="TEXT_TAX_VENDOR" xml:space="preserve">
+    <value>{DE}Tax Vendor</value>
+  </data>
+  <data name="TEXT_TAX_SERVICE_ADDRESS_PCODE" xml:space="preserve">
+    <value>{DE}Tax Service Address PCode</value>
+  </data>
+  <data name="TEXT_METRATAX_COUNTRY_ELIGIBILITY" xml:space="preserve">
+    <value>{DE}MetraTax Country Eligibility</value>
+  </data>
+  <data name="TEXT_METRATAX_COUNTRY_ZONE" xml:space="preserve">
+    <value>{DE}MetraTax Country Zone</value>
+  </data>
+  <data name="TEXT_METRATAX_HAS_OVERRIDE_BAND" xml:space="preserve">
+    <value>{DE}MetraTax Has Override Band</value>
+  </data>
+  <data name="TEXT_METRATAX_OVERRIDE_BAND" xml:space="preserve">
+    <value>{DE}MetraTax Override Band</value>
+  </data>
+  <data name="TEXT_TAX_REGISTRY_REFERENCE" xml:space="preserve">
+    <value>{DE}Tax Registry Reference</value>
+  </data>
+  <data name="TEXT_TAX_EXEMPT_REASON" xml:space="preserve">
+    <value>{DE}Tax Exempt Reason</value>
+  </data>
+  <data name="TEXT_TAX_EXEMPT_START_DATE" xml:space="preserve">
+    <value>{DE}Tax Exempt Start Date</value>
+  </data>
+  <data name="TEXT_TAX_EXEMPT_END_DATE" xml:space="preserve">
+    <value>{DE}Tax Exempt End Date</value>
+  </data>
+  <data name="TEXT_USE_STANDARD_INCLUSIVE_TAX_CALCULATION" xml:space="preserve">
+    <value>{DE}Use Standard Inclusive Tax Calculation</value>
+  </data>
 </root>
